# orbitons_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build__clean.bat  build__configure.bat  build__debug.bat  build__doc.bat  build__regenerate.bat  build__release.bat  doxy_config  doxy_header.html  vcpkg.json
Glad/: CMakeLists.txt
resources/: imgui.ini
resources/shaders/: basic_shader.frag  basic_shader.vert  mandelbrot.frag  phong_shader.frag  phong_shader.vert  skybox_shader.vert  unlit_shader.frag  unlit_shader.vert
src/: Application.cpp  Application.h  Orbitons.h  Window.cpp  Window.h  core.h  main.cpp  opengl_debug.h  orbital_body.cpp  pch.h  resource.rc
src/Orbitons/: Application.cpp  Application.h  Object3d.h  Window.cpp  Window.h  core.h  main.cpp  opengl_debug.h  orbital_body.h  pch.h
src/Orbitons/Events/: Event.cpp  Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/Orbitons/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicContext.cpp  GraphicContext.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Orbitons/Renderer/Buffers/: Buffer.cpp  Buffer.h  VertexArray.h
src/Orbitons/Scene/: Components.h  Entity.cpp  Entity.h  MeshObject.cpp  MeshObject.h  ResourceLibrary.cpp  ResourceLibrary.h  Scene.cpp  Scene.h  SelectionContext.cpp  SelectionContext.h
src/Orbitons/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  CameraControls.cpp  CameraControls.h  Entity3d.cpp  Entity3d.h  IDGenerator.cpp  IDGenerator.h  Input.cpp  Input.h  Material.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h  Object3d.cpp  Object3d.h  ObjectLoader.cpp  ObjectLoader.h  PlatformUtils.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h  Shader.cpp  Shader.h  Skybox.h  Texture.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h
src/Orbitons/imgui/: UI.cpp  UI.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSkybox.cpp  OpenGLSkybox.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexArrayBuffer.cpp  OpenGLVertexArrayBuffer.h
src/core/: Camera.cpp  Camera.h  Entity3d.cpp  Entity3d.h  Material.h  Mesh.cpp  Mesh.h  MeshUtils.cpp  Object3d.cpp  Object3d.h  ObjectLoader.h  Renderer.cpp  Scene.cpp  Scene.h  Shader.cpp  Skybox.cpp  Texture.h  Timer.cpp  Timer.h
src/core/buffers/: Buffer.cpp  Buffer.h  VertexArray.cpp  VertexArray.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h
src/imgui/: UI.cpp  UI.h
